--- a/labweb/templates/labweb/research_topic.html
+++ b/labweb/templates/labweb/research_topic.html
@@ -13,8 +13,7 @@
 <div class="container py-5">
     <!-- For Demo Purpose -->
     <header class="text-center">
-      <br><br><br>
-        <a href="/projects/#" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block"> go to  posts <i class="fa fa-arrow-right"></i></a>
+      <br><br><br><br><br><br>
       <h1 class="display-4 font-weight-bold">iNES AI team Resarch Main Topic</h1>
       <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
     </header>     
@@ -25,6 +24,8 @@
     <div class="py-5">
       <h3 class="font-weight-bold mb-0">Research Topic</h3>
       <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <a href="/projects/#" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block" style="color: black; font-weight: 500;"> go to  posts <i class="fa fa-arrow-right"></i></a>
+
       <div class="row">
         <!-- DEMO 1 Item-->
         <div class="col-lg-6  m-0 p-0">
